added a favorite field to the request currentUser
